CRIANDO O TESTE DE ROTAS - CORRIGIR READ DETAILS E UPDATE DAS ROTAS CATEGORY E TRANSACTION.

--- a/.insomnia/Request/req_abc480f6c4ba49808e74ef0e4b26c313.yml
+++ b/.insomnia/Request/req_abc480f6c4ba49808e74ef0e4b26c313.yml
@@ -1,7 +1,7 @@
 _id: req_abc480f6c4ba49808e74ef0e4b26c313
 type: Request
 parentId: fld_a8e855f8b6704d60b10dbe3bbea1292d
-modified: 1658440003922
+modified: 1658444350600
 created: 1658437212693
 url: "{{ _.base_url }}/user/signup"
 name: SIGN UP
@@ -11,7 +11,7 @@ body:
   mimeType: application/json
   text: |-
     {
-    	"name": "Eliel C",
+    	"name": "Eliel Calore",
     	"email": "eliel@test.com",
     	"password": "Senha@Segura123"
     }
