--- a/.insomnia/Request/req_cfb27a6482164cf58c2d2bde31b79e8a.yml
+++ b/.insomnia/Request/req_cfb27a6482164cf58c2d2bde31b79e8a.yml
@@ -1,9 +1,9 @@
 _id: req_cfb27a6482164cf58c2d2bde31b79e8a
 type: Request
 parentId: fld_a8e855f8b6704d60b10dbe3bbea1292d
-modified: 1658587301865
+modified: 1658672789648
 created: 1658439340350
-url: "{{ _.base_url }}/user/login"
+url: "{{ _.base_url }}/user/login/"
 name: LOGIN
 description: ""
 method: POST
